# ibc-hooks-snip20-auto-wrap-proxy-contract

./: .gitignore  Cargo.toml  Makefile
src/: contract.rs  msg.rs
