[package]
name = "ibc-hooks-snip20-auto-wrap-proxy-contract"
version = "0.0.0"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2018"
description = "A compact contract that can be called using IBC hooks to wrap incoming token transfers as SNIP-20 tokens"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
backtraces = ["cosmwasm-std/backtraces"]
with_floats = []

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", default-features = false, package = "secret-cosmwasm-std", rev = "dcdf314ddc964f4f929ff9d6c876b4b965ecdeeb", features = [
  "stargate",
  "staking",
  "ibc3"
] }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc"
] }
serde-json-wasm = "0.2.1"
